--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="root">
-      <img src="/logo-construcao.jpg" alt="some text" width="383" height="300" style=" left: 35%; position: relative; top: 150px; ">
+      <img src="./images/logo-construcao.jpg"alt="Busque o melhor para seu pet." width="383" height="300" style=" left: 35%; position: relative; top: 150px; ">
     </div>
   </body>
 </html>
